--- a/GannTime.html
+++ b/GannTime.html
@@ -252,8 +252,8 @@
                             <td>
                                 <table>
                                     <tr>
-                                        <td><input type="radio" name="Scrip" id="crude" value="With Paisa" checked/></td>
-                                        <td><input type="radio" name="Scrip" id="other" value="Without Paisa"/></td>
+                                        <td><input type="radio" name="Scrip" id="crude" value="With Paisa" checked>With Paisa</td>
+                                        <td><input type="radio" name="Scrip" id="other" value="Without Paisa">Without Paisa</td>
                                     </tr>
                                 </table>
                             </td>
