--- a/GannTime.html
+++ b/GannTime.html
@@ -74,6 +74,9 @@
             else if (document.getElementById('40P').checked) {
                 return_val = parseFloat(document.getElementById('40P').value);
             }
+            else if (document.getElementById('50P').checked) {
+                return_val = parseFloat(document.getElementById('50P').value);
+            }
             //alert(return_val);
             return return_val;
         }
@@ -267,6 +270,7 @@
                                         <td><input type="radio" name="percentage" id="20P" value="0.2">20</td>
                                         <td><input type="radio" name="percentage" id="30P" value="0.3">30</td>
                                         <td><input type="radio" name="percentage" id="40P" value="0.4" checked>40</td>
+                                        <td><input type="radio" name="percentage" id="50P" value="0.5">50</td>
                                     </tr>
                                 </table>
                             </td>
