--- a/NseGannTime.html
+++ b/NseGannTime.html
@@ -233,17 +233,7 @@
                             <td>Enter Low Value:</td>
                             <td><input type="text" name="txtLowVal" value=""></td>
                         </tr>
-                        <tr>
-                            <td>Scrip Type:</td>
-                            <td>
-                                <table>
-                                    <tr>
-                                        <td><input type="radio" name="Scrip" id="crude" value="crude" checked>Crude</td>
-                                        <td><input type="radio" name="Scrip" id="other" value="other">Other</td>
-                                    </tr>
-                                </table>
-                            </td>
-                        </tr>
+                        
                         <tr>
                             <td>Select SL %:</td>
                             <td>
@@ -252,7 +242,7 @@
                                         <td><input type="radio" name="percentage" id="10P" value="0.1" checked>10</td>
                                         <td><input type="radio" name="percentage" id="20P" value="0.2">20</td>
                                         <td><input type="radio" name="percentage" id="30P" value="0.3">30</td>
-                                        <td><input type="radio" name="percentage" id="40P" value="0.4" checked>40</td>
+                                        <td><input type="radio" name="percentage" id="40P" value="0.4">40</td>
                                         <td><input type="radio" name="percentage" id="50P" value="0.5">50</td>
                                     </tr>
                                 </table>
@@ -266,7 +256,7 @@
                                         <td><input type="radio" name="target" id="1X" value="1">1X</td>
                                         <td><input type="radio" name="target" id="1.5X" value="1.5" checked>1.5X</td>
                                         <td><input type="radio" name="target" id="2X" value="2">2X</td>
-                                        <td><input type="radio" name="target" id="3X" value="3" checked>3X</td>
+                                        <td><input type="radio" name="target" id="3X" value="3">3X</td>
                                         
                                     </tr>
                                 </table>
