--- a/GannTime.html
+++ b/GannTime.html
@@ -77,6 +77,9 @@
             else if (document.getElementById('50P').checked) {
                 return_val = parseFloat(document.getElementById('50P').value);
             }
+            else if (document.getElementById('60P').checked) {
+                return_val = parseFloat(document.getElementById('60P').value);
+            }
             //alert(return_val);
             return return_val;
         }
@@ -270,7 +273,8 @@
                                         <td><input type="radio" name="percentage" id="20P" value="0.2">20</td>
                                         <td><input type="radio" name="percentage" id="30P" value="0.3">30</td>
                                         <td><input type="radio" name="percentage" id="40P" value="0.4">40</td>
-                                        <td><input type="radio" name="percentage" id="50P" value="0.5" checked>50</td>
+                                        <td><input type="radio" name="percentage" id="50P" value="0.5">50</td>
+                                        <td><input type="radio" name="percentage" id="60P" value="0.6" checked>60</td>
                                     </tr>
                                 </table>
                             </td>
